Several changes forced by Android